<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViajesActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Viajes"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="390dp"
        android:layout_height="476dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="253dp"
                android:contentDescription="@string/VImagen"
                app:srcCompat="@mipmap/viaje1"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="93dp" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="262dp"
                android:contentDescription="@string/VImagen"
                app:srcCompat="@mipmap/viaje2"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="312dp" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:contentDescription="@string/VImagen"
                app:srcCompat="@mipmap/viaje3"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="488dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>