<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeporteActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="88dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/deporte"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="495dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:contentDescription="@string/DImagen"
                app:srcCompat="@mipmap/deporte1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="50dp" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="@string/DImagen"
                app:srcCompat="@mipmap/deporte2"
                tools:layout_editor_absoluteX="265dp"
                tools:layout_editor_absoluteY="253dp" />

            <ImageView
                android:id="@+id/imageView36"
                android:layout_width="406dp"
                android:layout_height="159dp"
                android:contentDescription="@string/DImagen"
                app:srcCompat="@mipmap/deporte3"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="298dp" />

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/DImagen"
                app:srcCompat="@mipmap/deporte4"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="402dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>