<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarreraActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="373dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Carrera"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="381dp"
        android:layout_height="446dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/CImagen"
                app:srcCompat="@mipmap/compu"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="236dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:contentDescription="@string/CImagen"
                app:srcCompat="@mipmap/itic"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="101dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CImagen"
                app:srcCompat="@mipmap/redes"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="363dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:contentDescription="@string/CImagen"
                app:srcCompat="@mipmap/teclado"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="491dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>