<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicaActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Musica"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="371dp"
        android:layout_height="531dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:contentDescription="@string/Imagen2"
                app:srcCompat="@mipmap/enjambre"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="108dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="267dp"
                android:contentDescription="@string/Imagen2"
                app:srcCompat="@mipmap/inspector"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="223dp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="292dp"
                android:contentDescription="@string/Imagen2"
                app:srcCompat="@mipmap/juansolo"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="385dp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:contentDescription="@string/Imagen2"
                app:srcCompat="@mipmap/mcmeny"
                tools:layout_editor_absoluteX="235dp"
                tools:layout_editor_absoluteY="458dp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:contentDescription="@string/Imagen2"
                app:srcCompat="@mipmap/rap"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="551dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>