<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeliculasActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Pelicula"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="390dp"
        android:layout_height="476dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/PImagen"
                app:srcCompat="@mipmap/pelicula1"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="107dp" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="match_parent"
                android:layout_height="352dp"
                android:contentDescription="@string/PImagen"
                app:srcCompat="@mipmap/pelicula2"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="107dp" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="296dp"
                android:contentDescription="@string/PImagen"
                app:srcCompat="@mipmap/pelicula3"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="360dp" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:contentDescription="@string/PImagen"
                app:srcCompat="@mipmap/pelicula4"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="564dp" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="377dp"
                android:layout_height="346dp"
                android:contentDescription="@string/PImagen"
                app:srcCompat="@mipmap/pelicula5"
                tools:layout_editor_absoluteX="234dp"
                tools:layout_editor_absoluteY="402dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>