<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SerieActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Series"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="495dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:contentDescription="@string/SImagen"
                app:srcCompat="@mipmap/serie1"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="85dp" />

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:contentDescription="@string/SImagen"
                app:srcCompat="@mipmap/serie2"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="310dp" />

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:contentDescription="@string/SImagen"
                app:srcCompat="@mipmap/serie3"
                tools:layout_editor_absoluteX="254dp"
                tools:layout_editor_absoluteY="358dp" />

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:contentDescription="@string/SImagen"
                app:srcCompat="@mipmap/serie4"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="524dp" />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="match_parent"
                android:layout_height="178dp"
                android:contentDescription="@string/SImagen"
                app:srcCompat="@mipmap/serie5"
                tools:layout_editor_absoluteX="246dp"
                tools:layout_editor_absoluteY="524dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>