<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComidaActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Musica"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="385dp"
        android:layout_height="562dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:contentDescription="@string/COImagen"
                app:srcCompat="@mipmap/comida1"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="84dp" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:contentDescription="@string/COImagen"
                app:srcCompat="@mipmap/comida2"
                tools:layout_editor_absoluteX="212dp"
                tools:layout_editor_absoluteY="84dp" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:contentDescription="@string/COImagen"
                app:srcCompat="@mipmap/comida3"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="227dp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:contentDescription="@string/COImagen"
                app:srcCompat="@mipmap/comida4"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="262dp" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="254dp"
                android:contentDescription="@string/COImagen"
                app:srcCompat="@mipmap/comida5"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="400dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>