<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibrosActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Libro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="385dp"
        android:layout_height="562dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:contentDescription="@string/LImagen"
                app:srcCompat="@mipmap/libros1"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="98dp" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:contentDescription="@string/LImagen"
                app:srcCompat="@mipmap/libros2"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="285dp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:contentDescription="@string/LImagen"
                app:srcCompat="@mipmap/libros3"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="488dp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="282dp"
                android:contentDescription="@string/LImagen"
                app:srcCompat="@mipmap/libro4"
                tools:layout_editor_absoluteX="264dp"
                tools:layout_editor_absoluteY="510dp" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:contentDescription="@string/LImagen"
                app:srcCompat="@mipmap/libros5"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="587dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="406dp"
        android:layout_height="67dp"
        android:onClick="volvermenu"
        android:text="@string/menuprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>